# ellipse

./: .gitignore  CHANGELOG.md  README.md  cabal.project  ellipse.cabal  example.ll
app/: Main.hs
bench/: Bench.hs
docs/: ariel.html  ariel.md  build.sh  intro.md  prooftreefilter.hs  semantics.html  semantics.md
src/: ByteCode.hs  CompressedByteCode.hs  CoreSyntaxTree.hs  Env.hs  EnvBasedEval.hs  Eval.hs  Interpreter.hs  Parser.hs  Repl.hs  SyntaxTree.hs  Type.hs  TypeCheck.hs  UnTypedCalculus.hs
