cabal-version:      2.4
name:               ellipse
version:            0.1.0.0
synopsis:           (Programming) Language

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Francesco Magliocca
maintainer:         franciman12@gmail.com

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Interpreter, SyntaxTree, CoreSyntaxTree, Type, TypeCheck, Eval, Env, UnTypedCalculus, Parser, Repl, ByteCode, CompressedByteCode

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions: StrictData
    build-depends:    base ^>=4.14.2.0, bytestring, cereal, containers, text, megaparsec, parser-combinators, deepseq, vector
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall

executable ellipse
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions: StrictData
    build-depends:
        base ^>=4.14.2.0,
        text,
        time,
        transformers,
        deepseq,
        criterion,
        ellipse

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall

test-suite ellipse-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.2.0

benchmark bench
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   bench
    main-is:          Bench.hs
    build-depends:    base ^>=4.14.2.0, ellipse, criterion, text, deepseq

